guestbook/guestbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  annotations:
    cert-manager.io/issuer: "letsencrypt-wc-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gbu1.k8s.d3n.it
    secretName: k8s-d3n-it-wildcard
  rules:
  - host: gbu1.k8s.d3n.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-ui
            port:
              number: 80
